test_next-20170331/20170330231534/build/build_20170330231534_log.txt
test_build: Thu Mar 30 23:17:49 PDT 2017: started on defconfig test_next-20170331 (6af2434b00cb7eae8756707453bf0384a8db9138)
test_build: Thu Mar 30 23:17:49 PDT 2017: serial is 20170330231534
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/Makefile:23: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
In file included from ./arch/arm64/include/asm/irqflags.h:21:0,
                 from ./include/linux/irqflags.h:15,
                 from ./include/linux/spinlock.h:53,
                 from ./include/linux/rcupdate.h:38,
                 from ./include/linux/rculist.h:10,
                 from ./include/linux/pid.h:4,
                 from ./include/linux/sched.h:13,
                 from arch/arm64/kernel/asm-offsets.c:21:
./arch/arm64/include/asm/ptrace.h: In function ‘regs_get_register’:
./arch/arm64/include/asm/ptrace.h:174:2: error: implicit declaration of function ‘_BUG_FLAGS’ [-Werror=implicit-function-declaration]
  WARN_ON(offset & 7);
  ^
cc1: some warnings being treated as errors
make[1]: *** [arch/arm64/kernel/asm-offsets.s] Error 1
make: *** [prepare0] Error 2
test_build: Thu Mar 30 23:17:59 PDT 2017: FAILED on defconfig test_next-20170331
test_build: Thu Mar 30 23:17:59 PDT 2017: ended on defconfig test_next-20170331
